@@ -35,6 +35,17 @@ endif (POLICY CMP0005)
 
 SET (CMAKE_BUILD_TYPE debug)
 
+## Version
+
+file (READ ../VERSION _OPENVASLIBNASL_VERSION)
+
+string (REGEX REPLACE "\\\n" "." _OPENVASLIBNASL_VERSION_STR ${_OPENVASLIBNASL_VERSION})
+string (REGEX REPLACE "\\." ";" OPENVASLIBNASL_VERSION ${_OPENVASLIBNASL_VERSION_STR})
+
+list(GET OPENVASLIBNASL_VERSION 0 OPENVASLIBNASL_MAJOR)
+list(GET OPENVASLIBNASL_VERSION 1 OPENVASLIBNASL_MINOR)
+list(GET OPENVASLIBNASL_VERSION 2 OPENVASLIBNASL_PATCH)
+
 ## CPack configuration
 
 SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
@@ -46,9 +57,9 @@ SET (CPACK_SOURCE_GENERATOR "TGZ")
 SET (CPACK_SOURCE_TOPLEVEL_TAG "")
 SET (CPACK_SYSTEM_NAME "")
 SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR "3")
-SET (CPACK_PACKAGE_VERSION_MINOR "0")
-SET (CPACK_PACKAGE_VERSION_PATCH "0")
+SET (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBNASL_MAJOR})
+SET (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBNASL_MINOR})
+SET (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBNASL_PATCH})
 SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
 SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
@@ -114,11 +125,6 @@ set (OPENVAS_CA_CERTIFICATE     "${OPENVAS_STATE_DIR}/CA/cacert.pem")
 
 message ("-- Install prefix: ${CMAKE_INSTALL_PREFIX}")
 
-## Version
-
-file (READ ../VERSION _OPENVASLIBNASL_VERSION)
-STRING (REPLACE "
-" "" _OPENVASLIBNASL_VERSION ${_OPENVASLIBNASL_VERSION})
 
 ## Config
 
@@ -161,7 +167,7 @@ SET_SOURCE_FILES_PROPERTIES (nasl_grammar.tab.c GENERATED)
 
 ## Pass-throughs
 add_definitions (-DOPENVAS_STATE_DIR=\\\"${OPENVAS_STATE_DIR}\\\")
-add_definitions (-DVERSION=\\\"${_OPENVASLIBNASL_VERSION}\\\")
+add_definitions (-DVERSION=\\\"${_OPENVASLIBNASL_VERSION_STR}\\\")
 add_definitions (-DOPENVAS_SYSCONFDIR=\\\"${OPENVAS_SYSCONF_DIR}\\\")
 
 include_directories (../base)
