@@ -1,4 +1,10 @@
-2010-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
+
+	* nasl/CMakeLists.txt: Get version dynamically from file VERSION.
+
+2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
 
